--- a/src/app/cruds/bills-to-pay/bills-to-pay.component.html
+++ b/src/app/cruds/bills-to-pay/bills-to-pay.component.html
@@ -6,7 +6,7 @@
                 <ng-template pTemplate="left">
                     <div class="my-2">
                         <button pButton pRipple label="Adicionar" icon="pi pi-plus" class="p-button-success mr-2" (click)="openNew()"></button>
-                        <button pButton pRipple lable="Exportar CSV" icon="pi pi-upload" class=" p-button-help" (click)="dt.exportCSV()"></button>
+                        <button pButton pRipple lable="Exportar CSV" icon="pi pi-upload" class=" p-button-help" (click)="dt.exportCSV()">Exportar CSV</button>
                     </div>
                 </ng-template>
 
